# squaas

./: .gitignore  ARCHITECTURE.md  BOT_README.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  GEOLOCATION_SETUP.md  MOBILE_SETUP.md  MOBILE_TESTING.md  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  bot.py  bot_realtime.py  start_mobile_cloudflare.sh  start_mobile_local.sh  start_mobile_ngrok.sh  start_mobile_simple.sh  test_bot.sh  vercel.json
backend/: Makefile  README.md  ai_processor.py  bot_realtime.py  demo_livestream.py  env.example  main.py  mock_gps.py  models.py  pois_database.py  pyproject.toml  render.yaml  run_server.sh  simple_test.py  test_api.py  test_message_fade.py  tts.py
docs/: plan.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/phone/: layout.tsx  page.tsx
frontend/components/: BossHealthBar.tsx  GpsStatus.tsx  MapOverlay.tsx  MessageOverlay.tsx  MobileBossBar.tsx  MobileMap.tsx  MobileMessage.tsx  MobileObjective.tsx  ObjectiveBar.tsx  PanicButton.tsx
frontend/hooks/: useGeolocation.ts  useWebSocket.ts
frontend/styles/: fantasy-ui.module.css
frontend/types/: game-state.ts
landing/: README.md  package-lock.json
landing/app/: globals.css  layout.tsx  page.tsx
